[gd_scene load_steps=6 format=3 uid="uid://dibbaexdtvhgf"]

[ext_resource type="Script" path="res://scenes/environment/ladder/ladder.gd" id="1_4dg1c"]
[ext_resource type="Texture2D" uid="uid://dpcg5jucrlb5h" path="res://scenes/environment/ladder/ladder.png" id="1_x1xhy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7sx2"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6d3bk"]
size = Vector2(16, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdhc5"]
size = Vector2(16, 1)

[node name="Ladder" type="Node2D" groups=["ladder"]]
texture_filter = 1
script = ExtResource("1_4dg1c")

[node name="Interact" type="Area2D" parent="." groups=["ladder"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
shape = SubResource("RectangleShape2D_q7sx2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x1xhy")

[node name="Platform" type="StaticBody2D" parent="." groups=["one_way_platform"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_6d3bk")
one_way_collision = true

[node name="DetectLadder" type="Area2D" parent="." groups=["one_way_platform"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectLadder"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_hdhc5")

[node name="OneWayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Interact" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="DetectLadder" to="." method="_on_detect_ladder_area_entered"]
[connection signal="timeout" from="OneWayTimer" to="." method="_on_one_way_timer_timeout"]
